# django-amazon-scrapper

./: README.md  headers.py  manage.py  pyproject.toml
django_amazon_scrapper/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
django_amazon_scrapper/scrapper/: admin.py  choices.py  config.py  models.py  signals.py  tasks.py  utils.py
django_amazon_scrapper/scrapper/migrations/: 0001_initial.py  0002_auto_20200512_0851.py
django_amazon_scrapper/scrapper/parsers/: base.py
tests/: test_django_amazon_scrapper.py
